Changed text to bold

--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
   </div>
 
   <!-- Add all other button styles here with both the <div> & <a> tags -->
+  <div>
+    <a class="btn btn-sub" href="#">Subtle button</a>
+  </div>
+  <div>
+    <a class="btn btn-gho" href="#">Ghost button</a>
+  </div>
+  <div>
+    <a class="btn btn-warn" href="#">Warning Button</a>
+  </div>
+  <div>
+    <a class="btn btn-pri-small" href="#">Primary button small</a>
+  </div>
+  <div>
+    <a class="btn btn-sub-small" href="#">Subtle button small</a>
+  </div>
+  <div>
+    <a class="btn btn-gho-small" href="#">Ghost button small</a>
+  </div>
+  <div>
+    <a class="btn btn-warn-small" href="#">Warning button small</a>
+  </div>
+  <div>
+    <a class="btn btn-pri-big" href="#">Primary button big</a>
+  </div>
+  <div>
+    <a class="btn btn-sub-big" href="#">Subtle button big</a>
+  </div>
+  <div>
+    <a class="btn btn-gho-big" href="#">Ghost button big</a>
+  </div>
+  <div>
+    <a class="btn btn-warn-big" href="#">Warning button big</a>
+  </div>
 
 </body>
 </html>
