--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="btn" href="#">Primary button</a>
+    <a class="btn btn-pri" href="#">Primary button</a>
   </div>
 
   <!-- Add all other button styles here with both the <div> & <a> tags -->
