Changes class label in css

--- a/index.html
+++ b/index.html
@@ -5,47 +5,48 @@
   <title>Button styles</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 </head>
 <body>
 
   <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="btn btn-pri" href="#">Primary button</a>
+    <a class="btn btn-primary" href="#">Primary button</a>
   </div>
 
   <!-- Add all other button styles here with both the <div> & <a> tags -->
   <div>
-    <a class="btn btn-sub" href="#">Subtle button</a>
+    <a class="btn btn-subtle" href="#">Subtle button</a>
   </div>
   <div>
-    <a class="btn btn-gho" href="#">Ghost button</a>
+    <a class="btn btn-ghost" href="#">Ghost button</a>
   </div>
   <div>
-    <a class="btn btn-warn" href="#">Warning Button</a>
+    <a class="btn btn-warning" href="#">Warning Button</a>
   </div>
   <div>
-    <a class="btn btn-pri-small" href="#">Primary button small</a>
+    <a class="btn btn-primary btn-small" href="#">Primary button small</a>
   </div>
   <div>
-    <a class="btn btn-sub-small" href="#">Subtle button small</a>
+    <a class="btn btn-subtle btn-small" href="#">Subtle button small</a>
   </div>
   <div>
-    <a class="btn btn-gho-small" href="#">Ghost button small</a>
+    <a class="btn btn-ghost btn-small" href="#">Ghost button small</a>
   </div>
   <div>
-    <a class="btn btn-warn-small" href="#">Warning button small</a>
+    <a class="btn btn-warning btn-small" href="#">Warning button small</a>
   </div>
   <div>
-    <a class="btn btn-pri-big" href="#">Primary button big</a>
+    <a class="btn btn-primary btn-big" href="#">Primary button big</a>
   </div>
   <div>
-    <a class="btn btn-sub-big" href="#">Subtle button big</a>
+    <a class="btn btn-subtle btn-big" href="#">Subtle button big</a>
   </div>
   <div>
-    <a class="btn btn-gho-big" href="#">Ghost button big</a>
+    <a class="btn btn-ghost btn-big" href="#">Ghost button big</a>
   </div>
   <div>
-    <a class="btn btn-warn-big" href="#">Warning button big</a>
+    <a class="btn btn-warning btn-big" href="#">Warning button big</a>
   </div>
 
 </body>
